Aplicando o Migrations no projeto

--- a/LanchesMac/Views/Shared/_Layout.cshtml
+++ b/LanchesMac/Views/Shared/_Layout.cshtml
@@ -20,7 +20,11 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>                       
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Demo">Demo</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -34,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - LanchesMac - <a asp-area="" asp-controller="Home" asp-action="Home">Home</a>
+            &copy; 2021 - LanchesMac - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
