--- a/LanchesMac/Views/Lanche/List.cshtml
+++ b/LanchesMac/Views/Lanche/List.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<LanchesMac.Models.Lanche>
+﻿
+@model  LancheListViewModel
 
 <div> 
-    <h2>@ViewData["Titulo"] </h2> 
+    <h2>@Model.CategoriaAtual </h2> 
     <h6>@ViewData["Data"]</h6>
 </div>
 
@@ -11,16 +12,9 @@
 
 <div class="container">
  <div class="row">
-@foreach(var lanche in Model)
+@foreach(var lanche in Model.Lanches)
 {
-    <div class="col-sm-4 col-md-4 col-lg-4">
-         <p><img src="@lanche.ImagemUrl" class="img-fluid"></p>
-         <h3>Preço: @lanche.Preco.ToString("c")</h3>
-         <h4>@lanche.Nome</h4>
-         <p>@lanche.DescricaoCurta</p>
-        
-        
-    </div>
+   <partial name = "_LanchesResumo" for="@lanche"/>   
 }
 </div>
 </div>
