--- a/LanchesMac/Views/Home/Index.cshtml
+++ b/LanchesMac/Views/Home/Index.cshtml
@@ -1,3 +1,14 @@
-﻿<h1>View Index</h1>
+﻿@model HomeViewModel
 
 <partial name="_Carousel"/>
+
+<h2>Os preferidos da semana</h2>
+<h4>Ta com fome ???</h4>
+
+<div class="row">
+    @foreach(var lanche in Model.LanchesPreferido)
+    {
+        <partial name="_Lanchesresumo" for="@lanche"/>
+    }
+
+</div>
