Criando a View Register

--- a/LanchesMac/Views/Account/Login.cshtml
+++ b/LanchesMac/Views/Account/Login.cshtml
@@ -1,8 +1,8 @@
-﻿ @model LoginViewModel
+﻿@model LoginViewModel
 
 <table class="table">
     <tr>
-        <td><img src="~/images/login_48.png" width="30%" height="auto" alt="Fazer o Login" class="center-block" /></td>
+        <td><img src="~/images/login_48.png" alt="Fazer o Login" class="center-block" /></td>
         <td>
             <div class="row">
                 <div class="col-10 col-md-10 col-lg-10">
