--- a/LanchesMac/Views/Shared/_Layout.cshtml
+++ b/LanchesMac/Views/Shared/_Layout.cshtml
@@ -12,7 +12,6 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="~/images/lanchemac2.png" widht="100" height="100" />
                     LanchesMac
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -29,6 +28,7 @@
                             <input type="text" class="form-control" placeholder="Procurar produto" name="searchString" value="@ViewData["searchString"]">
                         </div>
                     </form>
+                    @await Html.PartialAsync("_LoginPartial")
                 </div>
             </div>
         </nav>
