--- a/LanchesMac/Areas/Admin/Views/AdminPedidos/PedidoNotFound.cshtml
+++ b/LanchesMac/Areas/Admin/Views/AdminPedidos/PedidoNotFound.cshtml
@@ -4,14 +4,14 @@
     ViewData["Title"] = "404 Not Found";
 }
 
-<div class="alert alert-danger mt-1 mb-1"> 
-    <h1>Erro 404 - Not Found</h1>
+<div class="alert alert-danger mt-1 mb-1">
+    <h1>Erro 404 - Not Found </h1>
     <hr />
     <h2>
-        Pedido com id = @Model não fi encontrado
+        Pedido com o id = @Model não foi encontrado 
     </h2>
 </div>
 
 <a asp-action="Index" asp-controller="AdminPedidos" class="btn btn-outline-success">
-    <h2>Retorna para a ista de Pedidos</h2>
+    <h2>Retornar para a lista de Pedidos</h2>
 </a>
