--- a/LanchesMac/Views/_ViewImports.cshtml
+++ b/LanchesMac/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using LanchesMac
 @using LanchesMac.Models
 @using LanchesMac.ViewModels
+@using ReflectionIT.Mvc.Paging
+@using System.IO
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper LanchesMac.TagHelpers.*, LanchesMac
