101. Criando o controlador e os métodos Actions

--- a/LanchesMac/Areas/Admin/Views/AdminImagens/Index.cshtml
+++ b/LanchesMac/Areas/Admin/Views/AdminImagens/Index.cshtml
@@ -4,7 +4,8 @@
 <table border="0" width="100%">
     <tr>
         <td>
-            <form method="post" enctype="multipart/form-data" asp-controller="AdminImagens" asp-action="UploadFiles">
+            <form method="post" enctype="multipart/form-data" asp-controller="AdminImagens" 
+             asp-action="UploadFiles">
                 <img src="~/images/upload2.png" width="200" height="150" />
                 <hr />
                 <div class="form-group">
